--- a/apply/index.html
+++ b/apply/index.html
@@ -8,7 +8,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Karla:wght@500&family=Roboto:wght@700&family=Secular+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,-25" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,-25" />
-        <title>CMODRP | Apply </title>
+        <title>Cmod Networks | Apply</title>
+        <meta name="title" content="Cmod Networks | Apply">
+        <meta name="description" content="Additionally, we are actively seeking web developers and Lua developers to help improve and customize the server to provide the best experience for our players. If you have a passion for coding and want to contribute to the community, we encourage you to apply. We are also looking for dedicated staff members who are committed to creating a safe and enjoyable environment for all players. If you are interested in joining our team, please visit our website for more information on how to apply. We look forward to hearing from you and seeing you in-game!">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://cmod.co/">
+        <meta property="og:title" content="Cmod Networks | Apply">
+        <meta property="og:description" content="Additionally, we are actively seeking web developers and Lua developers to help improve and customize the server to provide the best experience for our players. If you have a passion for coding and want to contribute to the community, we encourage you to apply. We are also looking for dedicated staff members who are committed to creating a safe and enjoyable environment for all players. If you are interested in joining our team, please visit our website for more information on how to apply. We look forward to hearing from you and seeing you in-game!">
+        <meta property="og:image" content="">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://cmod.co/">
+        <meta property="twitter:title" content="Cmod Networks | Apply">
+        <meta property="twitter:description" content="Additionally, we are actively seeking web developers and Lua developers to help improve and customize the server to provide the best experience for our players. If you have a passion for coding and want to contribute to the community, we encourage you to apply. We are also looking for dedicated staff members who are committed to creating a safe and enjoyable environment for all players. If you are interested in joining our team, please visit our website for more information on how to apply. We look forward to hearing from you and seeing you in-game!">
+        <meta property="twitter:image" content="">
     </head>
 
     <body>
