--- a/index.html
+++ b/index.html
@@ -1,6 +1,48 @@
 <html>
 
     <head>
+        <title>Cmod Networks </title>
+        <meta name="title" content="Cmod Networks ">
+        <meta name="description" content="Welcome to Cmodrp, the premier Garry's Mod DarkRP server that has just started back up! Our server offers a unique and immersive gameplay experience that you won't find anywhere else. Join our community of dedicated players and enjoy the thrill of building your own base, earning money, and engaging in exciting RP scenarios.
+
+        At CMod, we pride ourselves on our custom content and features that set us apart from other DarkRP servers. We have a variety of jobs available, each with their own unique abilities and perks, so you can choose a role that suits your playstyle. We also have a range of custom weapons, vehicles, and items that you won't find anywhere else.
+
+        Our staff team is dedicated to providing a fun and fair gaming experience for all players. We have active moderators who are always on the lookout for rule breakers and hackers, ensuring a safe and enjoyable environment for everyone. We also have a dedicated support team that can assist with any issues or questions you may have.
+
+        So come and join us at CMod and experience the best that DarkRP has to offer. Whether you're a seasoned veteran or new to the game, there's something for everyone here. Join our community today and see what adventures await!
+
+        Additionally, we are actively seeking web developers and Lua developers to help improve and customize the server to provide the best experience for our players. If you have a passion for coding and want to contribute to the community, we encourage you to apply. We are also looking for dedicated staff members who are committed to creating a safe and enjoyable environment for all players. If you are interested in joining our team, please visit our website for more information on how to apply. We look forward to hearing from you and seeing you in-game!">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://cmod.co/">
+        <meta property="og:title" content="Cmod Networks ">
+        <meta property="og:description" content="Welcome to Cmodrp, the premier Garry's Mod DarkRP server that has just started back up! Our server offers a unique and immersive gameplay experience that you won't find anywhere else. Join our community of dedicated players and enjoy the thrill of building your own base, earning money, and engaging in exciting RP scenarios.
+
+        At CMod, we pride ourselves on our custom content and features that set us apart from other DarkRP servers. We have a variety of jobs available, each with their own unique abilities and perks, so you can choose a role that suits your playstyle. We also have a range of custom weapons, vehicles, and items that you won't find anywhere else.
+
+        Our staff team is dedicated to providing a fun and fair gaming experience for all players. We have active moderators who are always on the lookout for rule breakers and hackers, ensuring a safe and enjoyable environment for everyone. We also have a dedicated support team that can assist with any issues or questions you may have.
+
+        So come and join us at CMod and experience the best that DarkRP has to offer. Whether you're a seasoned veteran or new to the game, there's something for everyone here. Join our community today and see what adventures await!
+
+        Additionally, we are actively seeking web developers and Lua developers to help improve and customize the server to provide the best experience for our players. If you have a passion for coding and want to contribute to the community, we encourage you to apply. We are also looking for dedicated staff members who are committed to creating a safe and enjoyable environment for all players. If you are interested in joining our team, please visit our website for more information on how to apply. We look forward to hearing from you and seeing you in-game!">
+        <meta property="og:image" content="">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://cmod.co/">
+        <meta property="twitter:title" content="Cmod Networks ">
+        <meta property="twitter:description" content="Welcome to Cmodrp, the premier Garry's Mod DarkRP server that has just started back up! Our server offers a unique and immersive gameplay experience that you won't find anywhere else. Join our community of dedicated players and enjoy the thrill of building your own base, earning money, and engaging in exciting RP scenarios.
+
+        At CMod, we pride ourselves on our custom content and features that set us apart from other DarkRP servers. We have a variety of jobs available, each with their own unique abilities and perks, so you can choose a role that suits your playstyle. We also have a range of custom weapons, vehicles, and items that you won't find anywhere else.
+
+        Our staff team is dedicated to providing a fun and fair gaming experience for all players. We have active moderators who are always on the lookout for rule breakers and hackers, ensuring a safe and enjoyable environment for everyone. We also have a dedicated support team that can assist with any issues or questions you may have.
+
+        So come and join us at CMod and experience the best that DarkRP has to offer. Whether you're a seasoned veteran or new to the game, there's something for everyone here. Join our community today and see what adventures await!
+
+        Additionally, we are actively seeking web developers and Lua developers to help improve and customize the server to provide the best experience for our players. If you have a passion for coding and want to contribute to the community, we encourage you to apply. We are also looking for dedicated staff members who are committed to creating a safe and enjoyable environment for all players. If you are interested in joining our team, please visit our website for more information on how to apply. We look forward to hearing from you and seeing you in-game!">
+        <meta property="twitter:image" content="">
+
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -8,7 +50,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Karla:wght@500&family=Roboto:wght@700&family=Secular+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,-25" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,-25" />
-        <title>CMODRP</title>
     </head>
 
     <body>
@@ -17,6 +58,13 @@
             <span class="material-symbols-outlined" id="forums" alt="forums">captive_portal</span>
             <span class="material-symbols-outlined" id="apply" alt="apply" style="float: right; margin-right: 5%;">file_open</span>
         </div>
+        <div class="pop">
+            <h1>CmodRP</h1>
+            <br>
+            <h1>JOIN THE SCIENCE TEAM!</h1>
+            <iframe src="https://discord.com/widget?id=1077781014790807612&theme=dark" width="250" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
+
         <script src="script.js"></script>
     </body>
 
