--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
             <span class="material-symbols-outlined" id="forums" alt="forums">captive_portal</span>
             <span class="material-symbols-outlined" id="apply" alt="apply" style="float: right; margin-right: 5%;">file_open</span>
         </div>
-        <div class="pop">
+        <div class="pop" style="width: 25%; height: 5%;">
             <h1>CmodRP</h1>
-            <br>
+            <img src="/icons/SpaceCmod.png" width="100" height="100" style="border-radius: 20px;">
+        </div>
+
+        <div class="pop" style="width:40%; height:fit-content;">
             <h1>JOIN THE SCIENCE TEAM!</h1>
             <iframe src="https://discord.com/widget?id=1077781014790807612&theme=dark" width="250" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
