--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <span class="material-symbols-outlined" id="forums" alt="forums">captive_portal</span>
             <span class="material-symbols-outlined" id="apply" alt="apply" style="float: right; margin-right: 5%;">file_open</span>
         </div>
-        <div class="pop" style="width: 25%; height: 5%;">
+        <div class="pop" style="height:min-content; width: 16%; padding-bottom: 40px;">
             <h1>CmodRP</h1>
             <img src="/icons/SpaceCmod.png" width="100" height="100" style="border-radius: 20px;">
         </div>
