--- a/motd/index.html
+++ b/motd/index.html
@@ -1,6 +1,57 @@
 <html>
+
+    <style>
+    html{
+    background-color: rgb(0, 145, 255);
+    }
+
+    @keyframes rainbow{ 
+        0%{background-position:0% 50%}
+        50%{background-position:100% 25%}
+        100%{background-position:0% 50%};
+    }
+
+
+    .motd{
+        text-align: center;
+    }
+
+    .welcome{
+
+    }
+
+    .fancy{
+        min-height: 0vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        font-family: 'Work Sans', sans-serif;
+        font-size: 45px;
+        font-weight: 900;
+    }
+
+    .fancy-anim{
+        min-height: 0vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        font-family: 'Work Sans', sans-serif;
+        font-size: 45px;
+        font-weight: 900;
+    }
+
+    .discord:hover{
+    fill: #423AFF; 
+    }
+
+    img:hover{
+        filter: brightness(110%)
+    }
+    </style>
+
     <head>
-        <link rel="stylesheet" href="style.css">
         <title>CMOD MOTD</title>
     </head>
 
