--- a/apply/index.html
+++ b/apply/index.html
@@ -34,30 +34,7 @@
             <span class="material-symbols-outlined" id="apply" alt="apply" style="float: right; margin-right: 5%;">file_open</span>
         </div>
 
-
-        <div class="applyform">
-            <form>
-                <input type="text" name="fname" placeholder="First Name" size=20 required>
-                <input type="text" name="username" placeholder="Steam Username" size=20 required>
-                <input type="text" name="discord" placeholder="Discord Tag (include #)" size=20 required>
-                <input type="text" name="email" placeholder="Email" size=20 required>
-                <br>
-                <label>
-                    <input type="checkbox" id="lua_exp_check" name="lua_exp_check">
-                    Do You Have Any Lua Experience?
-                </label>
-                <br>
-                <label for="sl_lua" id="sl_lua_text"></label>
-                <br>
-                <select class="selhidden" name="sl_lua" id="sl_lua">
-                    <option value="basic">Little</option>
-                    <option value="medium">Average</option>
-                    <option value="fluent">Fluent</option>
-                </select>
-                <br>
-                <textarea name="whyadmin" placeholder="Why would you like to be an admin on CMOD" cols="20" rows="10" minlength="10" maxlength="500" required></textarea>
-            </form>    
-        </div>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScklmJ7pIlz4wty71Q9-RBebiZXmuh5gEvtx2fLt0g7l-Qztw/viewform?embedded=true" width="640" height="652" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
         <script src="script.js"></script>
     </body>
