--- a/apply/index.html
+++ b/apply/index.html
@@ -34,7 +34,7 @@
             <span class="material-symbols-outlined" id="apply" alt="apply" style="float: right; margin-right: 5%;">file_open</span>
         </div>
 
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScklmJ7pIlz4wty71Q9-RBebiZXmuh5gEvtx2fLt0g7l-Qztw/viewform?embedded=true" width="640" height="652" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe style="margin: auto; width: 100%;" src="https://docs.google.com/forms/d/e/1FAIpQLScklmJ7pIlz4wty71Q9-RBebiZXmuh5gEvtx2fLt0g7l-Qztw/viewform?embedded=true" width="640" height="652" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
         <script src="script.js"></script>
     </body>
