--- a/index.html
+++ b/index.html
@@ -69,8 +69,15 @@
         </div>
 
         <div class="pop" style="width:40%; height:fit-content;">
-            <h1>JOIN THE SCIENCE TEAM!</h1>
-            <iframe src="https://discord.com/widget?id=1077781014790807612&theme=dark" width="250" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <h1>Not Seeing Us In Menu?</h1>
+                <code><b>connect</b> 107.2.237.13</code>
+            <h1 style="margin-bottom: 5%; margin-top: 5%;">Staff</h1>
+            <img style="border-radius: 20px;" src="/motd/pfps/2eae4e2e7a6ac8682401514fe9a89da0f33b772c_full.jpg" width="75px" onclick="window.location.href='https://steamcommunity.com/profiles/76561198154682341/'">
+            <img style="border-radius: 20px;" src="/motd/pfps/orb.jpg" width="75px"  onclick="window.location.href='https://steamcommunity.com/id/OrbS1'">
+            <img style="border-radius: 20px;" src="/motd/pfps/lulcake.jpg" width="75px"  onclick="window.location.href='https://steamcommunity.com/profiles/76561198968222166/'">
+            <br>
+            <h1 style="margin-top: 10%">JOIN THE SCIENCE TEAM!</h1>
+            <iframe src="https://discord.com/widget?id=1077781014790807612&theme=dark" width="400" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
 
         <script src="script.js"></script>
